--- a/uis/MainWindow.ui
+++ b/uis/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>531</height>
+    <height>720</height>
    </rect>
   </property>
   <property name="font">
@@ -52,20 +52,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2" colspan="2">
-     <widget class="QPushButton" name="pushButton_inputFilesFeatures">
-      <property name="text">
-       <string>Selecionar Arquivos</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="2">
-     <widget class="QPushButton" name="pushButton_OK">
-      <property name="text">
-       <string>OK</string>
-      </property>
-     </widget>
-    </item>
     <item row="3" column="2" colspan="2">
      <widget class="QPushButton" name="pushButton_inputFileLimit">
       <property name="text">
@@ -73,7 +59,21 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="0" colspan="2">
+    <item row="5" column="2" colspan="2">
+     <widget class="QPushButton" name="pushButton_outputDir">
+      <property name="text">
+       <string>Selecionar Pasta</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="2">
+     <widget class="QPushButton" name="pushButton_OK">
+      <property name="text">
+       <string>OK</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0" colspan="2">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -86,10 +86,10 @@
       </property>
      </spacer>
     </item>
-    <item row="5" column="2" colspan="2">
-     <widget class="QPushButton" name="pushButton_outputDir">
+    <item row="1" column="2" colspan="2">
+     <widget class="QPushButton" name="pushButton_inputFilesFeatures">
       <property name="text">
-       <string>Selecionar Pasta</string>
+       <string>Selecionar Arquivos</string>
       </property>
      </widget>
     </item>
@@ -100,30 +100,30 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
-     <widget class="QLineEdit" name="lineEdit_inputFileLimit"/>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_inputLimit">
+      <property name="text">
+       <string>Limite:</string>
+      </property>
+     </widget>
     </item>
-    <item row="7" column="3">
+    <item row="8" column="3">
      <widget class="QPushButton" name="pushButton_Cancel">
       <property name="text">
        <string>Cancel</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_inputFeatures">
-      <property name="text">
-       <string>Sensoriamento (features):</string>
-      </property>
-     </widget>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="lineEdit_inputFileLimit"/>
     </item>
     <item row="5" column="1">
      <widget class="QLineEdit" name="lineEdit_outputDir"/>
     </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_inputLimit">
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_inputFeatures">
       <property name="text">
-       <string>Limite:</string>
+       <string>Sensoriamento (features):</string>
       </property>
      </widget>
     </item>
@@ -134,43 +134,26 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="0" colspan="4">
+    <item row="6" column="1">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="7" column="0" colspan="4">
      <widget class="QGroupBox" name="groupBox_options">
       <property name="title">
        <string>Options</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="1" column="1">
-        <widget class="QLabel" name="label_maxSamples">
-         <property name="text">
-          <string>Maximum number of samples per class:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="lineEdit_maxSamples">
-         <property name="toolTip">
-          <string>Classses with more samples than the number indicated here will be randomly selected.</string>
-         </property>
-         <property name="inputMask">
-          <string/>
-         </property>
-         <property name="text">
-          <string>150</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="label_atLeast">
-         <property name="text">
-          <string>Minimum number of samples per class:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="2">
+       <item row="2" column="2">
         <widget class="QLineEdit" name="lineEdit_atLeast">
          <property name="toolTip">
           <string>Classses with fewer samples than the number indicated here will be discarded.</string>
@@ -189,7 +172,54 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
+       <item row="2" column="1">
+        <widget class="QLabel" name="label_atLeast">
+         <property name="text">
+          <string>Minimum number of samples per class:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QLineEdit" name="lineEdit_maxSamples">
+         <property name="toolTip">
+          <string>Classses with more samples than the number indicated here will be randomly selected.</string>
+         </property>
+         <property name="inputMask">
+          <string/>
+         </property>
+         <property name="text">
+          <string>150</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_fieldName">
+         <property name="toolTip">
+          <string>The name of the field that contains the classes to be predicted (e.g., geology).</string>
+         </property>
+         <property name="text">
+          <string>Target field name:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLabel" name="label_maxSamples">
+         <property name="text">
+          <string>Maximum number of samples per class:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QComboBox" name="comboBox_fieldName">
+         <property name="toolTip">
+          <string>The name of the field that contains the classes to be predicted (e.g., geology)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
         <spacer name="horizontalSpacer_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -201,6 +231,135 @@
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="5" column="2">
+        <widget class="QCheckBox" name="checkBox_coords">
+         <property name="toolTip">
+          <string>Check for &quot;yes&quot;</string>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::RightToLeft</enum>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="label_id">
+         <property name="toolTip">
+          <string>A unique feature identifier (e.g., row number)</string>
+         </property>
+         <property name="text">
+          <string>Feature ID (fiducial)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QComboBox" name="comboBox_id">
+         <property name="toolTip">
+          <string>A unique feature identifier (e.g., row number)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QLabel" name="label_useCoordinates">
+         <property name="toolTip">
+          <string>Use the rasters coordinates as predictors in the model (increases model's spatial awareness)</string>
+         </property>
+         <property name="text">
+          <string>Use coordinates as features?</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="2">
+        <widget class="QCheckBox" name="checkBox_PCA">
+         <property name="layoutDirection">
+          <enum>Qt::RightToLeft</enum>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="1">
+        <widget class="QLabel" name="label_runPCA">
+         <property name="cursor">
+          <cursorShape>ArrowCursor</cursorShape>
+         </property>
+         <property name="text">
+          <string>Use PCA to reduce dimensionality of multi-band rasters?</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QLabel" name="label_PCAPercent">
+         <property name="text">
+          <string>Select percentage of the variance to keep:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1" colspan="2">
+        <widget class="Line" name="line">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="2">
+        <widget class="QComboBox" name="comboBox_PCAPercent">
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="currentText">
+          <string>95</string>
+         </property>
+         <property name="currentIndex">
+          <number>1</number>
+         </property>
+         <property name="maxVisibleItems">
+          <number>10</number>
+         </property>
+         <property name="sizeAdjustPolicy">
+          <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
+         </property>
+         <item>
+          <property name="text">
+           <string>99</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>95</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>90</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>80</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>70</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>50</string>
+          </property>
+         </item>
+        </widget>
        </item>
       </layout>
      </widget>
